--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,7 @@
     --background-color: #f3f3f3;
 }
 /* == DARK MODE == */
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
     :root {
         --text-color: white;
         --background-color: #1b1b1b;
@@ -12,7 +12,7 @@
     .main {
         text-shadow: 1px 1px 2px black;
     }
-}
+} */
 /* Fonts */
 @font-face {
     font-family: 'Calibri Light';
@@ -52,6 +52,14 @@ html::-webkit-scrollbar {
 html {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
+}
+/* Transition Timer */
+* {
+	-webkit-transition-property: all;
+	-webkit-transition-duration: .1s;
+  -moz-transition-timing-function: cubic-bezier(100,50,21,6);
+	-moz-transition-property: all;
+  -moz-transition-timing-function: cubic-bezier(100,50,21,6);
 }
 
 .bg { /* Asset and css from https://codepen.io/iceable/pen/yLBrZOd! */
@@ -136,6 +144,36 @@ html {
     flex-direction: row;
     flex-wrap: wrap;
 }
+.bar {
+    color: var(--text-color);
+    margin: 1em 2em 4em 35px;
+}
+
+header {
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
+    margin-left: 7vw;
+    z-index: 999;
+}
+
+.bar > .btn{
+    background:rgba(0, 0, 0, 0.5);
+    padding:10px 20px;
+    text-decoration:none;
+    letter-spacing:2px;
+    text-transform:uppercase;
+}
+
+.bar > .btn:hover{
+    border:none;
+    background:rgba(0, 0, 0, 0.4);
+    background:#fff;
+    padding:20px 20px;
+    color:#1b1b1b;
+}
+
+
 .footContent{
     /* tbd */
 }
