--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,7 @@
     --background-color: #f3f3f3;
 }
 /* == DARK MODE == */
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
     :root {
         --text-color: white;
         --background-color: #1b1b1b;
@@ -12,7 +12,7 @@
     .main {
         text-shadow: 1px 1px 2px black;
     }
-} */
+}
 /* Fonts */
 @font-face {
     font-family: 'Calibri Light';
@@ -146,31 +146,36 @@ html {
 }
 .bar {
     color: var(--text-color);
-    margin: 1em 2em 4em 35px;
+    margin-left: 20px;
+    min-height: 5em;
+    position: relative;
+    
 }
 
 header {
-    position: -webkit-sticky; /* Safari */
-    position: sticky;
-    top: 0;
     margin-left: 7vw;
     z-index: 999;
 }
 
 .bar > .btn{
     background:rgba(0, 0, 0, 0.5);
-    padding:10px 20px;
+    padding: 10px 20px;
     text-decoration:none;
     letter-spacing:2px;
+    margin: 20px 0 20px 0;
     text-transform:uppercase;
+    position: relative;
+    color: var(--text-color);
+    top: 20px;
 }
 
 .bar > .btn:hover{
     border:none;
-    background:rgba(0, 0, 0, 0.4);
-    background:#fff;
-    padding:20px 20px;
-    color:#1b1b1b;
+    background: rgba(0, 0, 0, 0.4);
+    background: #fff;
+    padding: 20px 20px;
+    margin: 0;
+    color: #1b1b1b;
 }
 
 
