--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,10 @@
 /* == LIGHT MODE == */
-:root {
+/* :root {
     --text-color: black;
     --background-color: #f3f3f3;
-}
+} */
 /* == DARK MODE == */
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
     :root {
         --text-color: white;
         --background-color: #1b1b1b;
@@ -12,6 +12,13 @@
     .main {
         text-shadow: 1px 1px 2px black;
     }
+} */
+:root {
+        --text-color: white;
+        --background-color: #1b1b1b;
+    }
+    .main {
+        text-shadow: 1px 1px 2px black;
 }
 /* Fonts */
 @font-face {
@@ -206,6 +213,18 @@ footer.footer {
     flex-direction: row;
     flex-wrap: wrap;
 }
+
+table.table, th, td {
+    color: var(--text-color);
+    background-color: var(--background-color);
+    filter: drop-shadow(2px 2px 2px #00000054);
+    padding: 5px;
+    font-size: .85em;
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+table{
+  }
 
 .main { /* Content Alignment */
     margin: 2vw auto 3vw 7vw;
