--- a/styles/main.css
+++ b/styles/main.css
@@ -187,6 +187,7 @@ header {
     position: relative;
     color: var(--text-color);
     top: 20px;
+    transition: .2s;
 }
 .bar > .btn:hover{
     border:none;
@@ -211,6 +212,42 @@ header {
     margin: 0px 0px 1em 20px;
     filter: drop-shadow(2px 2px 2px #00000054);
 }
+
+/* Works Page Tabs */
+
+/* Style the tab */
+.tab {
+  /* overflow: hidden; */
+  /* border: 1px solid #ccc;
+  background-color: #f1f1f1; */
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  /* background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s; */
+}
+
+
+/* Create an active/current tablink class */
+.tab button.active {
+  /* background-color: #ccc; */
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  
+  
+  border-top: none;
+}
+
+
 
 
 footer.footer {
