--- a/styles/main.css
+++ b/styles/main.css
@@ -49,7 +49,7 @@ b {
     font-weight: bold;
 }
 #top { /* To push down top block of content */
-    margin-top: 5em;
+    margin-top: 3em;
 }
 /* Hide Scrollbar */
 html::-webkit-scrollbar {
@@ -171,6 +171,8 @@ html {
     margin-left: 20px;
     min-height: 5em;
     position: relative;
+    display: flex;
+    align-items: center;
     
 }
 header {
@@ -183,7 +185,7 @@ header {
     text-decoration:none;
     letter-spacing:2px;
     margin: 20px 2px;
-    text-transform:uppercase;
+    text-transform: uppercase;
     position: relative;
     color: var(--text-color);
     top: 20px;
@@ -217,34 +219,28 @@ header {
 
 /* Style the tab */
 .tab {
-  /* overflow: hidden; */
-  /* border: 1px solid #ccc;
-  background-color: #f1f1f1; */
+    margin-left: 12px;
+    
 }
 
 /* Style the buttons that are used to open the tab content */
+.tab > .tablinks {
+    top: 0;
+}
 .tab button {
-  /* background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s; */
+    
+
 }
 
 
 /* Create an active/current tablink class */
 .tab button.active {
-  /* background-color: #ccc; */
+  background-color: var(--text-color);
 }
 
 /* Style the tab content */
 .tabcontent {
   display: none;
-  
-  
-  border-top: none;
 }
 
 
@@ -266,8 +262,7 @@ table.table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
 }
-table{
-  }
+table{}
 
 .main { /* Content Alignment */
     margin: 2vw auto 3vw 7vw;
