--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,8 @@
 :root {
     --text-color: 1b1b1b;
     --background-color: #1b1b1b;
-    --light-background-color: #c4c2b6;
+    /* --light-background-color: #c4c2b6; */
+    --light-background-color: white;
     --button-background: #4464AD;
     --accent-background: #efe9dd;
 }
