--- a/styles/main.css
+++ b/styles/main.css
@@ -143,12 +143,12 @@ html {
 /* Primary, Secondary, and Wide Sizes for content */
 .primary {
     max-width: 850px;
-    margin: 0 30px 0 20px;
+    margin: 0 auto 0 auto;
     
 }
 .secondary {
     max-width: 82vw;
-    margin: 0 30px 0 20px;
+    margin: 0 30px 0 30px;
 }
 
 /* Custom Font Sizes */
@@ -156,9 +156,9 @@ html {
     font-size: 2.5em;
     display: flex;
     align-items: center;
-    justify-content: left;
+    justify-content: center;
     max-height: fit-content;
-    margin: 0 0 0 20px;
+    margin: 0 0 0 10vw;
     
 }
 .big { 
@@ -454,7 +454,10 @@ table.table, th, td {
 table{}
 
 .main { /* Content Alignment */
-    margin: 2vw auto 3vw 7vw;
+    margin: 2vw 0 3vw 0;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     background-color: transparent;
 }
 
