--- a/styles/main.css
+++ b/styles/main.css
@@ -154,7 +154,7 @@ html {
 
 /* Custom Font Sizes */
 .header { 
-    font-size: 2.5em;
+    font-size: 1.9em;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -163,14 +163,18 @@ html {
     /* margin: 0; */
     
 }
+
+.huge {
+    font-size: 1.9em;
+}
 .big { 
-    font-size: 1.7em;
+    font-size: 1.6em;
 }
 .medium {
-    font-size: 1.5em;
+    font-size: 1.3em;
 }
 .small {
-    font-size: 1.3em;
+    font-size: 1.1em;
 }
 .paragraph {
     font-size: .7em;
@@ -185,9 +189,15 @@ html {
     /* flex-grow: 3; */
     /* text-shadow: 1px 1px #ff0075; */
 }
-h3.title {
-    margin: 1em 0 .7em 0;
+.titleContainer {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    max-height: fit-content;
 }
+/* h3.title {
+    margin: 1em 0 .7em 0;
+} */
 
 
 /* Header and Navbar */
@@ -241,10 +251,10 @@ header {
     /* color: var(--text-color); */
     color: white;
 }
-hr.headerLine {
+.headerLine {
     display: block;
     height: 1px;
-    width: 60vw;
+    width: 100%;
     border: 0;
     border-top: 1.5px solid #1c1c1c80;
     margin: 0 1em ;
@@ -352,9 +362,10 @@ hr.headerLine {
     margin: 0 auto 0 auto;
     align-items: center;
     justify-content: center;
-    max-width: 90%;
-    filter: drop-shadow(2px 2px 2px #00000054);
-    border: 1px solid var(--accent-color);
+    max-height: 85%;
+    max-width: 75%;
+    /* filter: drop-shadow(2px 2px 2px #00000054);
+    border: 1px solid var(--accent-color); */
 }
 .inlineImage {
     /* max-width: 600px; */
@@ -362,14 +373,14 @@ hr.headerLine {
     margin: 0 auto 0 auto;
     align-items: center;
     justify-content: center;
-    max-width: 70%;
+    max-width: 60%;
     filter: drop-shadow(2px 2px 2px #00000054);
-    border: 1px solid var(--accent-color);
+    border: 1.5px solid var(--accent-color);
 }
 .inlineImage:hover {
-    max-width: 71%;
+    max-width: 61%;
     filter: drop-shadow(2px 2px 4px #00000071);
-    border: 1px solid var(--accent-color);
+    border: 1.5px solid var(--accent-color);
 }
 .imgContainer {
     display: flex;
@@ -383,6 +394,7 @@ hr.headerLine {
 }
 .heroImage {
     max-height: 500px;
+    
 }
 
 /* Works Page Tabs */
@@ -451,6 +463,8 @@ hr.headerLine {
 .hero {
     height: 500px;
     background-color: #1b1b1b;
+    display: flex;
+    justify-content: center;
 }
 
 footer.footer {
