--- a/styles/main.css
+++ b/styles/main.css
@@ -497,9 +497,13 @@ table{}
 .card { 
     color: black;
 }
+.card-body {
+    background-color: var(--accent-background);
+}
 div.card-footer {
     padding: .5rem .75rem 0.1rem;
     text-align: center;
+    background-color: var(--accent-background);
 }
 .projectCard {
     display: inline-block;
